--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <h1>git project</h1>
+    <p>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi, quo?
+    </p>
+  </body>
 </html>
