--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>git project</h1>
     <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi, quo?
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus soluta
+      corporis laborum expedita aliquid quod, consectetur sed voluptate error
+      voluptatem esse quas adipisci eligendi consequatur sequi minus cum. Porro,
+      voluptate.
     </p>
   </body>
 </html>
